# opcode_sdk

./: CMakeLists.txt  README.md
6.x/: README.md
6.x/src/: misc.cpp
7.x/: CMakeLists.txt  README.md
7.x/cmake/Modules/: FindCsound.cmake
7.x/csd/: misc.csd
7.x/src/: misc.cpp  mult.c  mult.cpp
csd/: mult.csd
src/: misc.cpp  mult.c  mult.cpp
